Use media view in functional tests
Change-Id: I7be04906759bc9cc31507f273dee0112337b9b02
JIRA: EE-1051

Former-commit-id: ebfc1f3b35d82089c59b55ba21c119ec6c32b5b6

--- a/pubsdk/Tests/IntegrationTests/NativeAd/CR_NativeAdTableViewCell.xib
+++ b/pubsdk/Tests/IntegrationTests/NativeAd/CR_NativeAdTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,13 +26,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="productImageUrl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksW-wb-bmN">
+                            <view opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ksW-wb-bmN" customClass="CRMediaView">
                                 <rect key="frame" x="0.0" y="36" width="540" height="35.5"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ud3-E7-kjL">
                                 <rect key="frame" x="0.0" y="71.5" width="540" height="36"/>
                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -61,13 +58,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="advertiserLogoImageUrl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2d-at-JtZ">
+                            <view opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U2d-at-JtZ" customClass="CRMediaView">
                                 <rect key="frame" x="0.0" y="214.5" width="540" height="36"/>
                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OhL-La-bEF">
                                 <rect key="frame" x="0.0" y="250.5" width="540" height="35.5"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -123,11 +117,11 @@
             <connections>
                 <outlet property="advertiserDescriptionLabel" destination="BQi-hg-Gcf" id="HBj-kL-59T"/>
                 <outlet property="advertiserDomainUrlLabel" destination="VTG-86-Vse" id="Jn1-Ay-Sgi"/>
-                <outlet property="advertiserLogoImageUrlLabel" destination="U2d-at-JtZ" id="tQs-15-MW5"/>
+                <outlet property="advertiserLogoMediaView" destination="U2d-at-JtZ" id="tQs-15-MW5"/>
                 <outlet property="bodyLabel" destination="Ud3-E7-kjL" id="cax-He-XvM"/>
                 <outlet property="callToActionLabel" destination="18t-ZH-bca" id="5Xe-x6-spA"/>
                 <outlet property="priceLabel" destination="OhL-La-bEF" id="b1Y-x4-EDs"/>
-                <outlet property="productImageUrlLabel" destination="ksW-wb-bmN" id="l5X-7z-ijy"/>
+                <outlet property="productMediaView" destination="ksW-wb-bmN" id="l5X-7z-ijy"/>
                 <outlet property="titleLabel" destination="abw-bX-K4d" id="cOq-Sm-aX6"/>
             </connections>
             <point key="canvasLocation" x="-37.681159420289859" y="-46.875"/>
