Add the CRNativeAd in the CRNativeAdView in the tests with the TableView
Change-Id: Ie1e081c5ccdb3d3b67fb32921ff4a871305776b1
JIRA: EE-1093

Former-commit-id: 26e159505136e918b6116acdd44ecb341e9fbe3e

--- a/pubsdk/Tests/IntegrationTests/NativeAd/CR_NativeAdTableViewCell.xib
+++ b/pubsdk/Tests/IntegrationTests/NativeAd/CR_NativeAdTableViewCell.xib
@@ -120,6 +120,7 @@
                 <outlet property="advertiserLogoMediaView" destination="U2d-at-JtZ" id="tQs-15-MW5"/>
                 <outlet property="bodyLabel" destination="Ud3-E7-kjL" id="cax-He-XvM"/>
                 <outlet property="callToActionLabel" destination="18t-ZH-bca" id="5Xe-x6-spA"/>
+                <outlet property="nativeAdView" destination="ouf-Ke-QaH" id="8Hd-mE-T0r"/>
                 <outlet property="priceLabel" destination="OhL-La-bEF" id="b1Y-x4-EDs"/>
                 <outlet property="productMediaView" destination="ksW-wb-bmN" id="l5X-7z-ijy"/>
                 <outlet property="titleLabel" destination="abw-bX-K4d" id="cOq-Sm-aX6"/>
